# QKEngine

./: CMakeLists.txt  README.md  copy.bat
Base/: CMakeLists.txt  Element.cpp  Element.h  Shader.cpp  Shader.h  SimpleData.cpp  Texture.cpp  Texture.h  Utils.cpp  Utils.h
Model/: CMakeLists.txt  Model.cpp  Model.h  TextureData.cpp  TextureData.h
QKEngine/: CMakeLists.txt  QKEngine.cpp  QKEngine.h
Res/: CMakeLists.txt  Res.cpp  Res.h
Resources/: fragment.shader  vertex.shader
Resources/Shader/: defaultModel.frag  defaultModel.vert  fragment.shader  test.frag  vertex.shader
Resources/SimpleData/: test.dsimple  test.simple  test2.simple
Resources/TextureData/: Cube.dtexture  test.dtexture
Window/: BaseWindow.cpp  BaseWindow.h  CMakeLists.txt  Element.cpp  Element.h  Shader.cpp  Shader.h  SimpleData.cpp  SimpleData.h  Texture.cpp  Texture.h  TextureData.cpp  Utils.cpp  Utils.h
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
